Started adding client and user management

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,8 @@ __pycache__/
 
 
 # End of https://www.gitignore.io/api/aspnetcore,visualstudiocode
+
+# Secrets
+Certificates/*
+Config.cs
+app.db
