Start on Client modification page

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "DataSource=app.db",
+    "MysqlConnectionString": "Server=localhost;Port=4306;Database=PowerDb;User=root;Password=my-secret-pw;"
   },
   "Logging": {
     "LogLevel": {
