Dockerize the app

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db",
-    "MysqlConnectionString": "Server=localhost;Port=4306;Database=PowerDb;User=root;Password=my-secret-pw;"
+    "MysqlConnectionString": "Server=db;Port=3306;Database=PowerDb;User=root;Password=FulleFuler34VandrerFlott;",
+    "DevelopmentConnectionString": "Server=localhost;Port=3306;Database=PowerDb;User=root;Password=my-secret-pw;"
   },
   "Logging": {
     "LogLevel": {
