--- a/db.env
+++ b/db.env
@@ -1,5 +1,5 @@
 # Database setup
-MYSQL_ROOT_PASSWORD=FulleFuler34VandrerFlott
+MYSQL_ROOT_PASSWORD=[YOUR_DB_ROOT_PASSWORD]
 MYSQL_DATABASE=PowerDb
-MYSQL_USER=StressFullUser
-MYSQL_PASSWORD=Vasket59Buffel
+MYSQL_USER=[YOUR_DB_USER]
+MYSQL_PASSWORD=[YOUR_DB_USER_PASSWORD]
