Making all OpenSsl go into the same folder

--- a/docker/OpenSsl/docker-openssl.yml
+++ b/docker/OpenSsl/docker-openssl.yml
@@ -3,6 +3,6 @@ version: '3.7'
 services:
   
   openssl:
-    build: ./OpenSsl
+    build: .
     volumes: 
-      - "./OpenSSl:/export/"
+      - ".:/export/"
