Added configuration of signing certificate as env variables. Added Administrator policy. Added AccessDenied page. Added SeedData for first-run

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db",
-    "MysqlConnectionString": "Server=db;Port=3306;Database=PowerDb;User=root;Password=FulleFuler34VandrerFlott;",
-    "DevelopmentConnectionString": "Server=localhost;Port=3306;Database=PowerDb;User=root;Password=my-secret-pw;"
+    "MysqlConnectionString": "Server=db;Port=3306;Database=PowerDb;User=root;Password=FulleFuler34VandrerFlott;"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information"
     }
   },
   "AllowedHosts": "*"
