--- a/docker/web.env
+++ b/docker/web.env
@@ -2,3 +2,7 @@ ASPNETCORE_URLS=https://+
 ASPNETCORE_HTTPS_PORT=8001
 ASPNETCORE_Kestrel__Certificates__Default__Path=/https/authserver.pfx
 ASPNETCORE_Kestrel__Certificates__Default__Password=[your pfx password]
+AuthServerAdministrator=[AdministratorName]
+AuthServerAdministratorPassword=[your administrator password]
+AuthServerSigningCertificatePath=/https/SigningCertificate.pfx
+AuthServerSigningCertificatePassword=[you signing certificate password]
