Changing and using context to collect all docker-related files in docker folder

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,9 @@ services:
       - auth-server-backend
 
   web:
-    build: ../
+    build:
+      context: ../
+      dockerfile: docker/Dockerfile
     expose:
       - "443"
     depends_on:
