Note in nginx config

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -33,6 +33,7 @@ server {
 
     #Redirects all traffic
     location / {
+        # REMEMBER TO CHANGE THIS TO HTTP WHEN KESTRES SSL IS REMOVED!
         proxy_pass  https://authserver;
         limit_req   zone=one burst=10 nodelay;
     }
