--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: nginx:stable-alpine
     volumes:
       #- /etc/letsencrypt:/etc/letsencrypt:ro
-      - ../Certificates:/etc/ssl/certs
+      - ../Certificates:/etc/ssl/certs:ro
       - ./nginx/secret.nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginx/proxy.conf:/etc/nginx/proxy.conf:ro
     expose:
