--- a/docker/web.env
+++ b/docker/web.env
@@ -1,7 +1,4 @@
-ASPNETCORE_URLS=https://+
-ASPNETCORE_HTTPS_PORT=8001
-ASPNETCORE_Kestrel__Certificates__Default__Path=/https/authserver.pfx
-ASPNETCORE_Kestrel__Certificates__Default__Password=[your pfx password]
+ASPNETCORE_URLS=http://+:5001
 AuthServerAdministrator=[AdministratorName]
 AuthServerAdministratorPassword=[your administrator password]
 AuthServerSigningCertificatePath=/https/SigningCertificate.pfx
