--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,8 +1,8 @@
 include    /etc/nginx/proxy.conf;
 limit_req_zone $binary_remote_addr zone=one:10m rate=5r/s;
 
-upstream authserver{
-    server web:443;
+upstream authserver {
+    server web:5001;
 }
 
 server {
@@ -33,8 +33,7 @@ server {
 
     #Redirects all traffic
     location / {
-        # REMEMBER TO CHANGE THIS TO HTTP WHEN KESTRES SSL IS REMOVED!
-        proxy_pass  https://authserver;
+        proxy_pass  http://authserver;
         limit_req   zone=one burst=10 nodelay;
     }
 }
