--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       #- /etc/letsencrypt:/etc/letsencrypt:ro
       - ../Certificates:/etc/ssl/certs:ro
-      - ./nginx/secret.nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginx/proxy.conf:/etc/nginx/proxy.conf:ro
     expose:
       - 80
