--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM microsoft/dotnet:2.1.500-sdk AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
 WORKDIR /source
 
 # copy everything else and build app
@@ -6,7 +6,7 @@ COPY . .
 RUN dotnet restore && dotnet publish -c Debug -o out
 
 
-FROM microsoft/dotnet:2.1.6-aspnetcore-runtime AS runtime
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 AS runtime
 WORKDIR /app
 COPY --from=build /source/out ./
 ENTRYPOINT ["dotnet", "AuthServer.dll"]
