Add ApiResource endpoint
Add FE-code to add ApiResource

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.gitignore.io/api/aspnetcore,visualstudiocode
 
 
-/.DS_Store
+.DS_Store
 
 ### ASPNETCore ###
 ## Ignore Visual Studio temporary files, build results, and
