--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,16 @@
   "author": "Trond Bordewich",
   "description": "Authorization server",
   "scripts": {
-    "dev": "gulp",
-    "build": "gulp build",
+    "build": "elm make src/Main.elm --output=../wwwroot/Main.js && yarn copyStatics",
+    "copyStatics": "cp ./index.html ../wwwroot", 
+    "serve": "yarn copyStatics && elm-live src/Main.elm --path-to-elm=./node_modules/.bin/elm --host=127.0.0.1 --port=3001 --dir=../wwwroot --ssl --debug --pushstate --open --start-page=../wwwroot/index.html -- --output=../wwwroot/Main.js",
     "buildAll": "yarn generateApi && yarn build",
     "genSwagger": "ASPNETCORE_ENVIRONMENT=SwaggerGen dotnet build ../",
     "genElmApiCode": "docker run --rm -v \"${PWD}:/local\" openapitools/openapi-generator-cli generate -i local/swagger.yaml -g elm -o /local",
     "generateApi": "yarn genSwagger && yarn genElmApiCode"
   },
-  "dependencies": {},
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-elm": "^0.8.2",
-    "gulp-plumber": "^1.2.1",
-    "gulp-server-io": "^1.5.1"
+    "elm": "^0.19.1-3",
+    "elm-live": "^4.0.2"
   }
 }
