--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,31 @@
   "author": "Trond Bordewich",
   "description": "Authorization server",
   "scripts": {
-    "build": "elm make src/Main.elm --output=../wwwroot/Main.js && yarn copyStatics",
-    "copyStatics": "cp ./index.html ../wwwroot", 
-    "serve": "yarn copyStatics && elm-live src/Main.elm --path-to-elm=./node_modules/.bin/elm --host=127.0.0.1 --port=3001 --dir=../wwwroot --ssl --debug --pushstate --open --start-page=../wwwroot/index.html -- --output=../wwwroot/Main.js",
-    "buildAll": "yarn generateApi && yarn build",
+    "start": "yarn install && yarn run build:dev && yarn run dev",
+    "test": "elm-test",
+    "test:watch": "elm-test --watch",
+    "build": "run-s build:elm-spa build:elm",
+    "build:dev": "run-s build:elm-spa build:dev:elm",
+    "dev": "run-p dev:elm-spa dev:elm",
+    "build:elm": "elm make src/Main.elm --optimize --output=public/dist/elm.compiled.js",
+    "build:dev:elm": "elm make src/Main.elm --debug --output=public/dist/elm.compiled.js || true",
+    "build:elm-spa": "elm-spa build .",
+    "dev:elm": "elm-live src/Main.elm -u -d public --host=127.0.0.1 --port=3001 --ssl -- --debug --output=public/dist/elm.compiled.js",
+    "dev:elm-spa": "chokidar src/Pages -c \"elm-spa build .\"",
+    "buildAll": "run-s generateApi build",
     "genSwagger": "ASPNETCORE_ENVIRONMENT=SwaggerGen dotnet build ../",
     "genElmApiCode": "docker run --rm -v \"${PWD}:/local\" openapitools/openapi-generator-cli generate -i local/swagger.yaml -g elm -o /local",
-    "generateApi": "yarn genSwagger && yarn genElmApiCode"
+    "generateApi": "run-s genSwagger genElmApiCode",
+    "publish": "cp ./public/* ../wwwroot"
   },
+  "keywords": [],
+  "license": "ISC",
   "devDependencies": {
-    "elm": "^0.19.1-3",
-    "elm-live": "^4.0.2"
+    "chokidar-cli": "2.1.0",
+    "elm": "0.19.1-3",
+    "elm-live": "4.0.2",
+    "elm-spa": "5.0.3",
+    "elm-test": "0.19.1-revision2",
+    "npm-run-all": "4.1.5"
   }
 }
