--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,19 +13,20 @@
     "build:elm": "elm make src/Main.elm --optimize --output=public/dist/elm.compiled.js",
     "build:dev:elm": "elm make src/Main.elm --debug --output=public/dist/elm.compiled.js || true",
     "build:elm-spa": "elm-spa build .",
+    "dev:mock": "run-p dev:mockserver dev",
     "dev:elm": "elm-live src/Main.elm -u -d public --host=127.0.0.1 --port=3001 --ssl-key='../Certificates/nginx-selfsigned.key' --ssl-cert='../Certificates/nginx-selfsigned.crt' -- --debug --output=public/dist/elm.compiled.js",
-    "dev:mock": "run-p runmockserver dev:elm",
-    "runmockserver": "node ./api_mocking/mock_api.js",
+    "dev:mockserver": "node ./api_mocking/mock_api.js",
     "dev:elm-spa": "chokidar src/Pages -c \"elm-spa build .\"",
     "buildAll": "run-s generateApi build",
+    "generateApi": "run-s genSwagger genElmCode",
     "genSwagger": "ASPNETCORE_ENVIRONMENT=SwaggerGen dotnet build ../",
-    "genElmApiCode": "docker run --rm -v \"${PWD}:/local\" openapitools/openapi-generator-cli generate -i local/swagger.yaml -g elm -o /local",
-    "generateApi": "run-s genSwagger genElmApiCode",
+    "genElmCode": "openapi-generator-cli generate -i ./swagger.yaml -g elm -o ./",
     "publish": "cp -r ./public/ ../wwwroot"
   },
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.1.6",
     "chokidar-cli": "2.1.0",
     "elm": "0.19.1-3",
     "elm-live": "4.0.2",
