We have to allow nullable Id, when adding new resources

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,14 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build
 WORKDIR /source
 
 # copy everything else and build app
+COPY *.csproj .
+RUN dotnet restore 
+
 COPY . .
-RUN dotnet restore && dotnet publish -c Debug -o out
+RUN dotnet publish -c Debug -o out --no-restore
 
-
-FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS runtime
+FROM mcr.microsoft.com/dotnet/aspnet:5.0-focal AS runtime
 WORKDIR /app
 COPY --from=build /source/out ./
 ENTRYPOINT ["dotnet", "AuthServer.dll"]
