Add new mapper, update dependencies
Add NewtonSoft since System.Json.Text messes up swagger schema.
Starting to add Client model and endpoints

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     volumes:
       - seq-vol:/data
     networks:
-      - default
+      - auth-server-backend
     env_file:
       - seq.env
     restart: unless-stopped
