--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -18,7 +18,10 @@
     "AuthServer": {
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local",
+        "ASPNETCORE_URLS": "https://+:5001",
+        "AuthServerAdministrator": "Admin",
+        "AuthServerSigningCertificatePath": "./Certificates/SigningCertificate.pfx"
       }
     }
   }
