Update index.html with elm.js, and update build-scripts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,11 @@
     "test": "elm-test",
     "test:watch": "elm-test --watch",
     "build": "run-s build:elm-spa build:elm publish",
-    "build:dev": "run-s build:elm-spa build:dev:elm publish",
+    "build:dev": "run-s gen:elm-spa build:dev:elm publish",
     "dev": "run-p dev:elm-spa dev:elm",
-    "build:elm": "elm make src/Main.elm --optimize --output=public/dist/elm.compiled.js",
-    "build:dev:elm": "elm make src/Main.elm --debug --output=public/dist/elm.compiled.js || true",
-    "build:elm-spa": "elm-spa build .",
+    "build:elm": "elm make src/Main.elm --optimize --output=public/dist/elm.js",
+    "build:dev:elm": "elm make src/Main.elm --debug --output=public/dist/elm.js || true",
+    "gen:elm-spa": "elm-spa gen",
     "dev:mock": "run-p dev:mockserver dev",
     "dev:elm": "elm-live src/Main.elm -u -d public --host=127.0.0.1 --port=3001 --ssl-key='../Certificates/nginx-selfsigned.key' --ssl-cert='../Certificates/nginx-selfsigned.crt' -- --debug --output=public/dist/elm.compiled.js",
     "dev:mockserver": "node ./api_mocking/mock_api.js",
