--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,11 @@
     "test:watch": "elm-test --watch",
     "build:dev": "run-s gen:elm-spa build:dev:elm publish",
     "dev": "run-p dev:elm-spa dev:elm",
+    "dev:mock": "run-p dev:mockserver dev:elm",
     "build:elm": "elm-spa build",
     "build:dev:elm": "elm make src/Main.elm --debug --output=public/dist/elm.js || true",
     "gen:elm-spa": "elm-spa gen",
-    "dev:mock": "run-p dev:mockserver dev:elm",
-    "dev:elm": "elm-live src/Main.elm -u -d public --host=127.0.0.1 --port=3001 --ssl-key='../Certificates/nginx-selfsigned.key' --ssl-cert='../Certificates/nginx-selfsigned.crt' -- --debug --output=public/dist/elm.compiled.js",
+    "dev:elm": "elm-live src/Main.elm -u -d public --host=127.0.0.1 --port=3001 --ssl-key='../Certificates/nginx-selfsigned.key' --ssl-cert='../Certificates/nginx-selfsigned.crt' -- --debug --output=public/dist/elm.js",
     "dev:mockserver": "node ./api_mocking/mock_api.js",
     "dev:elm-spa": "chokidar src/Pages -c \"elm-spa build .\"",
     "buildAll": "run-s generateApi build",
