--- a/appsettings.Local.json
+++ b/appsettings.Local.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MysqlConnectionString": "Server=localhost;Port=3306;Database=PowerDb;User=root;Password=FulleFuler34VandrerFlott;"
+    "MysqlConnectionString": "Server=localhost;Port=3306;Database=PowerDb;User=root;Password=1Fulle#Fuler34!;"
   }
 }
