--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MysqlConnectionString": "Server=db;Port=3306;Database=PowerDb;User=root;Password=FulleFuler34VandrerFlott;"
+    "MysqlConnectionString": "Server=db;Port=3306;Database=PowerDb;User=root;Password=1Fulle#Fuler34!;"
   },
   "AllowedHosts": "*"
 }
