--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -19,7 +19,7 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Local",
-        "ASPNETCORE_URLS": "https://+:5001",
+        "ASPNETCORE_URLS": "https://+",
         "AuthServerAdministrator": "Admin",
         "AuthServerSigningCertificatePath": "./Certificates/SigningCertificate.pfx"
       }
